# RodgersICA

./: README.md  RodgersICA.ipynb  RodgersICADemo.ipynb  SQOOP_RodgersICA.ipynb  SQOOP_RodgersICA_Amir.ipynb  SQOOP_RodgersICA_Amir_plot.ipynb  SQOOP_RodgersICA_Jacek.ipynb  SQOOP_RodgersICA_Jacek_plot.ipynb  SQOOP_RodgersICA_plot.ipynb  plot_gaussian.ipynb  pyproject.toml
rodgersica/: __init__.py  functions.py
