[tool.poetry]
name = 'RodgersICA'
version = '0.1.0'
description = 'Rodgers Information Content Assessment (ICA)'
authors = ['Kirk Knobelspiesse <kirk.knobelspiesse@nasa.gov>']

[tool.poetry.dependencies]
python = '>=3.8,<3.11'
numpy = '^1.19'

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
scipy = "^1.8.1"

[build-system]
requires = ['poetry-core~=1.0']
build-backend = 'poetry.core.masonry.api'